--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -11,5 +11,14 @@
     <br>
     <%= f.submit "Submit", :disable_with => 'Submiting...' %>
     <% end %>
+
+<% if @group.errors.any? %>
+<ul>
+  <% @group.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+</ul>
+<% end %>
+
 </div>
 	
