implement my groups

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -10,7 +10,7 @@
                 <li>
                     <%= link_to("登入", '#') %>
 
-<% if !current_user %>
+                 <% if !current_user %>
                   <li><%= link_to("注册", new_user_registration_path) %> </li>
                   <li><%= link_to("登入", new_user_session_path) %></li>
                 <% else %>
@@ -27,6 +27,11 @@
 
                 </li>
             </ul>
+            <ul class="dropdown-menu">
+       <li> <%= link_to("My Groups", account_groups_path) %></li>
+       <li class="divider"> </li>
+       <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
+   </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
